--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "updatemain": "git checkout main && git add -A && echo 'Enter Commit Message' && read msg && git commit -m \"$msg\" && git push origin main"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "20.5.2",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "image-resize-compress": "^1.1.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
