--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "image-resize-compress": "^1.1.0",
+    "mongodb": "^6.0.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
