--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "updatemain": "git checkout main && git add -A && echo 'Enter Commit Message' && read msg && git commit -m \"$msg\" && git push origin main"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^1.8.18",
     "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "20.5.2",
     "@types/react": "18.2.20",
